fix wrong font being used

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,5 +1,6 @@
 .home {
   color: var(--content-primary);
+  font-family: "Inter", sans-serif;
 }
 
 .dark-area {
